Changing which part is scrollable. First issue fixed, now main page content behind dialog will scroll when the address bar is hidden in safari.

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -27,10 +27,6 @@
     background: rgba(255, 255, 255, 1) none repeat scroll 0% 0%;
     min-height: 100%;
     width: 100%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    touch-action: pan-y;
-    overscroll-behavior: auto;
 
     z-index: 12;
 }
@@ -40,6 +36,10 @@
     margin-left: 3rem;
     margin-top: 50px;
     margin-right: 3rem;
+
+    overflow: auto;
+    touch-action: pan-y;
+    overscroll-behavior: auto;
 
     z-index: 16;
 }
